Login Backend logic created, datatable added, profile data going on

--- a/src/server/package.json
+++ b/src/server/package.json
@@ -10,5 +10,8 @@
     "node"
   ],
   "author": "SK",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express-session": "^1.18.1"
+  }
 }
