--- a/.env
+++ b/.env
@@ -1,4 +1,1 @@
-# .env
-REACT_APP_API_URL=http://localhost:3001
-REACT_APP_OTHER_VAR=value
-LOCAL_IP1=192.168.1.152
+REACT_APP_LOCAL_IP1=192.168.1.152
