--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,10 @@
 {
-    "cSpell.words": [
-        "Jeppiaar",
-        "noopener",
-        "noreferrer",
-        "Quizzards",
-        "Signin"
-    ]
+  "cSpell.words": [
+    "Jeppiaar",
+    "mongosh",
+    "noopener",
+    "noreferrer",
+    "Quizzards",
+    "Signin"
+  ]
 }
