--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@
 # dependencies
 # Add to .gitignore
 /node_modules
-client/node_modules
-client/node_modules/.cache
+client/node_modules/
+server/node_modules/
 
 # testing
 /coverage
