--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "mongodb": "^6.10.0",
+    "multer": "^1.4.5-lts.2",
     "node-session": "^1.2.1"
   }
 }
